// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`onCase > optimize #1 1`] = `
"import { match } from "@monstermann/match";
value === a ? transform(value) : false;"
`;

exports[`onCase > optimize #2 1`] = `
"import { match } from "@monstermann/match";
value === a ? value : false;"
`;

exports[`onCase > optimize #3 1`] = `
"import { match } from "@monstermann/match";
value === a ? v : false;"
`;

exports[`onCase > optimize #4 1`] = `
"import { match } from "@monstermann/match";
value === a ? value ? 1 : 2 : false;"
`;

exports[`onCase > optimize #5 1`] = `
"import { match } from "@monstermann/match";
value === a ? value.foo : false;"
`;

exports[`onCase > optimize #6 1`] = `
"import { match } from "@monstermann/match";
value === a ? transform(value) : false;"
`;

exports[`onCase > optimize #7 1`] = `
"import { match } from "@monstermann/match";
value === a ? transform(value.foo) : false;"
`;

exports[`onCase > optimize #8 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? transform(_value) : false)(getValue());"
`;

exports[`onCase > optimize #9 1`] = `
"import { match } from "@monstermann/match";
getValue() === a ? value : false;"
`;

exports[`onCase > optimize #10 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? v : false)(getValue());"
`;

exports[`onCase > optimize #11 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCase > optimize #12 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? _value.foo : false)(getValue());"
`;

exports[`onCase > optimize #13 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? transform(_value) : false)(getValue());"
`;

exports[`onCase > optimize #14 1`] = `
"import { match } from "@monstermann/match";
(_value => _value === a ? transform(_value.foo) : false)(getValue());"
`;
